--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,27 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.fundo {
+  position: relative;
+  color: white;
+  /*Note, you can change the color to your choice depending on your 
+  image and what color blends with it*/
+}
+
+.fundo::after {
+  content: "";
+  opacity: 0.8;
+  background: rgb(26, 31, 41) url("/bg.jpg") no-repeat fixed top;
+  background-blend-mode: luminosity;
+  /* also change the blend mode to what suits you, from darken, to other 
+  many options as you deem fit*/
+  background-size: cover;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: absolute;
+  z-index: -1;
+  height: 500px;
+}
