--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,18 +1,17 @@
-html {
-}
 body {
-  background-color: #4c76ba;
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	background-color: #4c76ba; margin:auto 0; font-family:Arial, Helvetica, sans-serif; font-size:1.5em; color:#FFF; font-weight:700;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+.chamada1 {float:left;}
+.chamada {float:right; position: absolute; margin-top:-85px; margin-left:400px;}
+.texto-cerca {text-align:center; margin-top:10px;}
+.cerca { padding:20px; margin:auto 0; text-align:center;}
+.assinatura { text-align:center; font-size:14px; font-weight:400; margin: 30px 0 40px 0; color:#FFF;}
+.texto-cerca { text-align:center; color:#FFF;}
+.box img {float:left;}
 
-* {
-  box-sizing: border-box;
+@media only screen (min-width: 768px){
+ 
+.box img {float:left;}
+ 
 }
