--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,195 @@
 body {
-	background-color: #4c76ba; margin:auto 0; font-family:Arial, Helvetica, sans-serif; font-size:1.5em; color:#FFF; font-weight:700;
+  background-color: #4c76ba;
+  margin: auto 0;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #fff;
 }
 
-.chamada1 {float:left;}
-.chamada {float:right; position: absolute; margin-top:-85px; margin-left:400px;}
-.texto-cerca {text-align:center; margin-top:10px;}
-.cerca { padding:20px; margin:auto 0; text-align:center;}
-.assinatura { text-align:center; font-size:14px; font-weight:400; margin: 30px 0 40px 0; color:#FFF;}
-.texto-cerca { text-align:center; color:#FFF;}
-.box img {float:left;}
+.chamada1 {
+  float: left;
+}
+.chamada {
+  float: right;
+  position: absolute;
+  margin-top: -85px;
+  margin-left: 400px;
+}
+.texto-cerca {
+  text-align: center;
+  margin-top: 10px;
+  font-size: 1.5em;
+  font-weight: 700;
+}
+.cerca {
+  padding: 20px;
+  margin: auto 0;
+  text-align: center;
+}
+.assinatura {
+  text-align: center;
+  font-size: 14px;
+  font-weight: 400;
+  margin: 30px 0 40px 0;
+  color: #fff;
+}
+.texto-cerca {
+  text-align: center;
+  color: #fff;
+}
+.caixa {
+  flex: 1;
+}
+.flex-container {
+  display: flex;
+  flex-flow: row;
+}
+
+.hotel {
+  background-color: #4c76ba;
+  margin: auto 0;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #fff;
+}
+
+#head {
+  background-color: #008cff;
+  width: 100%;
+}
+#head img {
+  margin-left: 150px;
+}
+
+.hoteis {
+  font-size: 1.4em;
+  margin: 20px 0px 20px 20px;
+  font-weight: 700;
+  color: #fff;
+}
+
+.eventos {
+  font-size: 1.4em;
+  margin: 20px 0px 20px 20px;
+  font-weight: 700;
+  color: #000;
+}
+.foto img {
+  float: left;
+  margin: 0px 15px 0px 5px;
+}
+.titulo {
+  font-size: 1.4em;
+  font-weight: 700;
+  color: #ffcc00;
+}
+.publicidade {
+  margin: 50px 0 0 0;
+}
+.box {
+  margin-bottom: 20px;
+  clear: both;
+  padding: 0px 5px 10px 0px;
+
+}
+.texto {
+  margin: auto 0;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #fff;
+}
+
+.texto-eventos {
+  margin: auto 0;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #000;
+}
+
+.evento {
+  background-color: #f7941e;
+  margin: auto 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.servico {
+  background-color: #000;
+  margin: auto 0;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #fff;
+}
+h2 {
+  color: #000;
+}
+.titulo-evento {
+  font-size: 1.4em;
+  font-weight: 700;
+}
+.link a:link {
+  color: #fff;
+  text-decoration: none;
+}
+.link a:visited {
+  color: #fff;
+  text-decoration: none;
+}
+.link a:hover {
+  color: #ccc;
+  text-decoration: none;
+}
+
+.link-servico a:link {color:yellow; text-decoration: none;}
+.link-servico a:visited {color:yellow; text-decoration: none;}
+.link-servico a:hover {color:#ccc; text-decoration: none;}
+
+.modalDialog {
+  position: fixed;
+  font-family: Arial, Helvetica, sans-serif;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.8);
+  z-index: 99999;
+  opacity: 0;
+  -webkit-transition: opacity 400ms ease-in;
+  -moz-transition: opacity 400ms ease-in;
+  transition: opacity 400ms ease-in;
+  pointer-events: none;
+}
+
+.modalDialog:target {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.modalDialog > div {
+  width: 300px;
+  position: relative;
+  margin: 10% auto;
+  padding: 5px 20px 13px 20px;
+  border-radius: 10px;
+  background: #fff;
+  background: -moz-linear-gradient(#fff, #999);
+  background: -webkit-linear-gradient(#fff, #999);
+  background: -o-linear-gradient(#fff, #999);
+}
+
+.close {
+  background: #606061;
+  color: #ffffff;
+  line-height: 25px;
+  position: absolute;
+  right: -12px;
+  text-align: center;
+  top: -10px;
+  width: 24px;
+  text-decoration: none;
+  font-weight: bold;
+  -webkit-border-radius: 12px;
+  -moz-border-radius: 12px;
+  border-radius: 12px;
+  -moz-box-shadow: 1px 1px 3px #000;
+  -webkit-box-shadow: 1px 1px 3px #000;
+  box-shadow: 1px 1px 3px #000;
+}
+
+.close:hover {
+  background: #00d9ff;
+}
