--- a/styles/globals.css
+++ b/styles/globals.css
@@ -212,6 +212,7 @@ h2 {
 
 #aplicativo-hoteis {
   width: 120%;
+  height: 120%;
   background-color: #4c76ba;
 }
 #aplicativo-eventos{
@@ -229,6 +230,7 @@ h2 {
 
 #aplicativo-pontos-turisticos {
   width: 120%;
+  height: 120%;
   background-color: #4c76ba;
 }
 #aplicativo-servicos {
